            Added: OSDMenuItemModifyNameColor() to change the color of the name separately from the color of the item line
            Added: OSDMenuItemModifyValueLeftArrowGap() to be able to control the distance between name and value
            Added: OSDMenuSetMemo() to be able to initialize and control an OSDMemo from scratch
            Added: OMDM_Text - an OSDMemo that won't scoll beyond its last line
            Modified: OSDMenuSetMemo() can either set OMDM_Memo or OMDM_Text now
            Added: OSDMenuSetLineHeight() and enums tLineHeight to allow for a different number of lines
            Added: OSDMenuGetNrOfLines() to query the current number of lines
            Fixed: The ScrollBar graphics contained various pixels with slightly wrong color
            Added: New cursor graphics that are necessary for different line heights (i.e. different number of lines)
            Fixed: OSDMenuSetCursor() doesn't draw the new cursor
            Added: OSDMemoFormatText() to allow a dynamic change of the font size (i.e. the number of lines)
            Added: TMSOSDMenu memo demo
            Modified: TMSOSDMenu menu demo demonstrates dynamic change of both the font size (i.e. the number of lines) and the cursor type
            Modified: Replace the previous WaitSpinner with one that (unlike a circular one) looks undistorted on the 5:4 OSD
            Modified: Release date
2019-09-26  Fixed: Potential out-of-bounds read in StringEndsWith()
2019-10-03  Fixed: FMUC_PutStringAA() and FM_PutStringAA(): both drew one pixel line too high
2019-10-04  Fixed: OSDMenuPutS() made private again (due to the use of FONTYOFFSET)
            Added: OSDMenuPutString() (user-usable replacement for OSDMenuPutS())
            Modified: OSDMenuGetH() renamed OSDMenuGetStringHeight()
            Modified: Rename OSDMenuGetW() OSDMenuGetStringWidth() and define OSDMenuGetW as an alias