@@ -8,7 +8,7 @@ bool OSDMenuItemModifyNameIcon(int ItemIndex, TYPE_GrData *pNameIconGd)
 
   pMenu = &Menu[CurrentMenuLevel];
 
-  if((pMenu->NrItems == 0) || (ItemIndex >= pMenu->NrItems))
+  if((ItemIndex < 0) || (ItemIndex >= pMenu->NrItems))
   {
     TRACEEXIT();
     return FALSE;
