@@ -1107,3 +1107,4 @@ The following functions accept any form a path. The INI and language INI functio
             Added: OSDMenuPutString() (user-usable replacement for OSDMenuPutS())
             Modified: OSDMenuGetH() renamed OSDMenuGetStringHeight()
             Modified: Rename OSDMenuGetW() OSDMenuGetStringWidth() and define OSDMenuGetW as an alias
+            Fixed: Check ItemIndex for potential out-of-bounds array access
